fix(Form): reverted top padding spacing to previous on error message in Form component

--- a/src/components/Form/_form.scss
+++ b/src/components/Form/_form.scss
@@ -87,7 +87,7 @@
   .#{$prefix}--form-requirement {
     @include reset;
     @include typescale('omega');
-    margin: $spacing-xs 0 0;
+    margin: $spacing-2xs 0 0;
     max-height: 0;
     //overflow: hidden;
     font-weight: 600;
